--- a/src/hpp/gepetto/path_player_gui.glade
+++ b/src/hpp/gepetto/path_player_gui.glade
@@ -6,11 +6,12 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkAdjustment" id="SpeedAdjustment">
-    <property name="upper">1</property>
-    <property name="value">0.01</property>
-    <property name="step_increment">0.01</property>
-    <property name="page_increment">0.10000000000000001</property>
+  <object class="GtkAdjustment" id="TimeAdjustment">
+    <property name="lower">0.01</property>
+    <property name="upper">100</property>
+    <property name="value">1</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">10</property>
   </object>
   <object class="GtkWindow" id="MainWindow">
     <property name="can_focus">False</property>
@@ -26,10 +27,10 @@
             <property name="n_rows">2</property>
             <property name="n_columns">3</property>
             <child>
-              <object class="GtkLabel" id="label_speed">
+              <object class="GtkLabel" id="label_time">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label">Speed:</property>
+                <property name="label">Time (seconds):</property>
               </object>
               <packing>
                 <property name="x_options"></property>
@@ -74,7 +75,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkSpinButton" id="Speed">
+              <object class="GtkSpinButton" id="Time">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="max_length">10</property>
@@ -85,12 +86,12 @@
                 <property name="secondary_icon_activatable">False</property>
                 <property name="primary_icon_sensitive">True</property>
                 <property name="secondary_icon_sensitive">True</property>
-                <property name="adjustment">SpeedAdjustment</property>
+                <property name="adjustment">TimeAdjustment</property>
                 <property name="climb_rate">1</property>
                 <property name="digits">3</property>
                 <property name="numeric">True</property>
                 <property name="update_policy">if-valid</property>
-                <signal name="value-changed" handler="on_Speed_value_changed" swapped="no"/>
+                <signal name="value-changed" handler="on_Time_value_changed" swapped="no"/>
               </object>
               <packing>
                 <property name="left_attach">1</property>
