--- a/src/hpp/gepetto/path_player_gui.glade
+++ b/src/hpp/gepetto/path_player_gui.glade
@@ -328,18 +328,6 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkImage" id="ImagePlot">
-                    <property name="width_request">640</property>
-                    <property name="height_request">480</property>
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="stock">gtk-missing-image</property>
-                  </object>
-                  <packing>
-                    <property name="right_attach">2</property>
-                  </packing>
-                </child>
-                <child>
                   <object class="GtkComboBox" id="ComboBoxXSelect">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
@@ -354,6 +342,21 @@
                     <property name="top_attach">1</property>
                     <property name="bottom_attach">2</property>
                     <property name="y_options">GTK_FILL</property>
+                  </packing>
+                </child>
+                <child>
+                  <placeholder/>
+                </child>
+                <child>
+                  <object class="GtkVBox" id="BoxPlotArea">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <child>
+                      <placeholder/>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="right_attach">2</property>
                   </packing>
                 </child>
               </object>
