--- a/src/hpp/gepetto/path_player_gui.glade
+++ b/src/hpp/gepetto/path_player_gui.glade
@@ -33,7 +33,7 @@
               <object class="GtkTable" id="table_spinbuttons">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="n_rows">2</property>
+                <property name="n_rows">3</property>
                 <property name="n_columns">3</property>
                 <child>
                   <object class="GtkLabel" id="label_time">
@@ -80,6 +80,23 @@
                     <property name="right_attach">2</property>
                     <property name="top_attach">1</property>
                     <property name="bottom_attach">2</property>
+                    <property name="x_options">GTK_FILL</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkButton" id="RefreshPaths">
+                      <property name="label">gtk-refresh</property>
+                      <property name="visible">True</property>
+                      <property name="can_focus">True</property>
+                      <property name="receives_default">True</property>
+                      <property name="use_stock">True</property>
+                      <signal name="clicked" handler="on_ButtonRefreshPaths_clicked" swapped="no"/>
+                  </object>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="right_attach">2</property>
+                    <property name="top_attach">2</property>
+                    <property name="bottom_attach">3</property>
                     <property name="x_options">GTK_FILL</property>
                   </packing>
                 </child>
